--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
 body {
 	margin: 0;
 }
+:root {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+		Arial, sans-serif;
+}
+.text_box {
+	text-size-adjust: 100%;
+}
+.text_md {
+	font-size: 1rem /* 14px */;
+	font-family: inherit;
+}
+
+.text_sm {
+	font-size: 0.875rem /* 14px */;
+	line-height: 1.25rem /* 20px */;
+	font-family: inherit;
+}
+
+.text_xs {
+	font-size: 8px;
+	font-family: inherit;
+}
+.text_3xl {
+	font-size: 1.875rem /* 30px */;
+	line-height: 2.25rem /* 36px */;
+}
+.kor {
+	font-weight: 500;
+}
+.eng {
+	font-weight: 600;
+}
