--- a/src/components/news/card.css
+++ b/src/components/news/card.css
@@ -1,5 +1,8 @@
 #card_layout {
-	width: 400px;
+	min-width: 400px;
+	max-width: 400px;
+	width: 100%;
+
 	height: 500px;
 	overflow-y: clip;
 	border-color: rgb(207, 217, 222);
@@ -42,6 +45,8 @@
 #insights_row {
 	display: flex;
 	padding: 0.2rem;
+	
+	gap:0.4rem
 }
 
 #news_body {
