--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body {
 :root {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 		Arial, sans-serif;
+	margin: 0;
+	overflow: clip;
 }
 .text_box {
 	text-size-adjust: 100%;
@@ -23,6 +25,9 @@ body {
 	font-size: 8px;
 	font-family: inherit;
 }
+.text_lg{
+	font-size: 1.25rem 
+}
 .text_3xl {
 	font-size: 1.875rem /* 30px */;
 	line-height: 2.25rem /* 36px */;
@@ -32,4 +37,17 @@ body {
 }
 .eng {
 	font-weight: 600;
+}
+
+.text_bold{
+	font-weight: bold;
+}
+.border_gray {
+	border: solid 1px rgb(207, 217, 222);
+}
+
+.section_title {
+	font-size: 1.875rem /* 30px */;
+	line-height: 2.25rem /* 36px */;
+	font-weight: 800;
 }
