--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
-body {
-	margin: 0;
-}
 :root {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 		Arial, sans-serif;
-	margin: 0;
+
 	overflow: clip;
 }
 .text_box {
@@ -25,8 +22,8 @@ body {
 	font-size: 8px;
 	font-family: inherit;
 }
-.text_lg{
-	font-size: 1.25rem 
+.text_lg {
+	font-size: 1.25rem;
 }
 .text_3xl {
 	font-size: 1.875rem /* 30px */;
@@ -39,7 +36,7 @@ body {
 	font-weight: 600;
 }
 
-.text_bold{
+.text_bold {
 	font-weight: bold;
 }
 .border_gray {
